[aliases]
test=pytest

[options.extras_require]
test =
    pytest>=6.0.0

alldeps =
    numpy>=1.22.0
    scipy>=1.9
    astropy>=5.0
    IPython>=7.2.0
    pandas>=1.2
    photutils>=1.1
    requests>=2.18
    dust_extinction>=1.4
    matplotlib>=3.3
    healpy>=1.12
    ligo.skymap>=2.3.0
    PyYAML>=5.1
    numba>=0.50.0
    pyvo>=1.5.3
    importlib-resources>=6.4.0
    astroquery>=0.4.6
